<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Edinburgh Travel</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_menu">Edinburgh Travel</string>
    <string name="tourist_attraction">Tourist Attractions</string>
    <string name="title_activity_splash">Edinburgh Travel</string>
    <string name="textView_edinburgh_title">Edinburgh Travel</string>
    <string name="action_search">Search</string>
    <string name="action_maps">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_restaurants">Restaurants</string>
    <string name="button_restaurants">Food</string>
    <string name="button_drinks">Drinks</string>
    <string name="title_activity_restaurant_info">RestaurantInfo</string>
    <string name="title_activity_gpslistener">GPSListener</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_refresh">Refresh</string>
    <string name="button_search_info_online">Search Web</string>
    <string name="button_add_to_itinerary_planner">Add to Itinerary</string>
    <string name="title_activity_drinks">Drinks</string>
    <string name="title_activity_drinks_info">DrinksInfo</string>
    <string name="title_activity_attractions">Attractions</string>
    <string name="title_activity_attractions_info">AttractionsInfo</string>
    <string name="button_accommodation">Accommodation</string>
    <string name="title_activity_accommodation">Accommodation</string>
    <string name="title_activity_accommodation_info">AccommodationInfo</string>
    <string name="search_accommodation">Search Accommodation</string>
    <string name="search_drinks">Search Drinks</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="search_attractions">Search Attractions</string>
    <string name="title_activity_nearby_places">NearbyPlaces</string>
    <string name="button_nearby_places">Nearby Places</string>
    <string name="title_activity_display_nearby_places">DisplayNearbyPlaces</string>
    <string name="title_activity_nearby_place_info">NearbyPlaceInfo</string>
    <string name="title_activity_display_nearby_place_info">DisplayNearbyPlaceInfo</string>
    <string name="button_show_nearby_place_map">Show Nearby Places on map</string>
    <string name="title_activity_nearby_places_map">NearbyPlacesMap</string>
    <string name="title_activity_display_nearby_places_map">DisplayNearbyPlacesMap</string>
    <string name="nearby_place_address_text">Address:</string>
    <string name="nearby_place_phone_number_text">Phone:</string>
    <string name="title_activity_shops">Shops</string>
    <string name="search_shops">Search Shops</string>
    <string name="button_shops">Shopping</string>
    <string name="title_activity_shop_info">ShopInfo</string>
    <string name="button_itinerary_planner">Itinerary Planner</string>
    <string name="title_activity_itinerary_planner">ItineraryPlanner</string>
    <string name="title_activity_itinerary_list">ItineraryList</string>
    <string name="button_delete_all_itinerary_items">Delete All Itinerary Items</string>
    <string name="title_activity_itinerary_item_direction">ItineraryItemDirection</string>
    <string name="button_delete_itinerary_item">Delete Itinerary Item</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_home">Home</string>
    <string name="action_log_in">Log In</string>
    <string name="action_help">Help</string>
    <string name="action_about_app">About</string>
    <string name="title_activity_login_splash_fragment">LoginSplashFragment</string>
    <string name="app_id">1460003874222865</string>
    <string name="title_facebook_login">Facebook Login</string>
    <string name="get_started">To get started, Log in using Facebook:</string>
    <string name="title_activity_logged_in_fragment">LoggedInFragment</string>
    <string name="action_logout">Logout</string>
    <string name="my_recommendations">My Recommendations</string>
    <string name="title_activity_recommendations">Recommendations</string>
    <string name="title_activity_recommended_place_info">RecommendedPlaceInfo</string>
    <string name="no_location_error">Could not obtain your current location</string>
    <string name="title_activity_facebook_place_picker">PlaceItemPicker</string>
    <string name="title_activity_place_picker_fragment">PlacePickerFragment</string>
    <string name="facebook_whats_near_here">What\'s Near Here</string>
    <string name="title_activity_facebook_place_info">FacebookPlaceInfo</string>

</resources>